--- a/css/stylesheetsingolo.css
+++ b/css/stylesheetsingolo.css
@@ -14,6 +14,12 @@ header {
 	width: 100%;
 	height: 96px;
 	background-color: #303441;
+	clear: both;
+}
+.header {
+	display: inline-block;
+	width: 1020px;
+	padding: 10px 10px 10px 10px;
 }
 
 #logo {
@@ -27,7 +33,7 @@ header {
 	display: inline-block;
 	list-style-type: none;
 	padding: 10px;
-	margin: 10px;
+	margin: 20px;
 }
 .singolo ul {
 	display: inline-block;
@@ -45,139 +51,391 @@ header {
 .singolo li, a:link {
 	font-family: sans-serif;
 	color: #fff;
-	text-decoration: none;}
+	text-decoration: none;
+}
 .singolo a:visited {
-	color: #fff;}
+	color: #fff;
+}
 .singolo a:active {
 	color: #fff;
-	padding-bottom: 2px;}
+	padding-bottom: 2px;
+}
 .singolo a:hover {
 	color: #eb5055;
-	text-decoration: none;}
+	text-decoration: none;
+}
 
 .containerslider {
-	width: 100%;
+	display: block;
+	height: 600px;
+	width: 1020px;
 	background-color: #ea676b;
-	padding: 40px 20px 40px 20px;
+	padding: 20px 20px 20px 20px;
+	margin: 0 auto;
+	border-bottom: 2px solid #eb5055;
 }
 .slider {
-
+	width: 1020px;
+	background-color: #ea676b;
+}
+.slider img {
+	border: .5px solid #ea676b;
+	border-radius: 28px;
+	box-shadow: 10px 20px 5px rgba(0,0,0,0.25);
+}
+.left {
+	float: left;
+	padding: 300px 20px 10px 30px;
+}
+.phone1 {
+	float: left;
+	width: 220px;
+	padding-top: 40px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 20px;
+	
+}
+.phone2 {
+	float: left;
+	width: 220px;
+	margin-left: 20px;
+	margin-top: 20px;
+	padding-left: 70px;
+	padding-top: 200px;
+}
+.right {
+	float: right;
+	padding: 300px 20px 10px 30px;
 }
 
 .services {
-	width: 100%;
+	width: 1020px;
 	background-color: #f2f2f2;
-	padding: 20px;
+	padding-top: 10px;
+	padding-left: 20px;
 	margin: 0 auto;
 	text-align: left;
+	border-bottom: 2px solid #fff;
 }
 .sertitle {
-	width: 85%;
+	width: 100%;
 	display: inline-block;
+	padding: 10px;
 }
 .sertitle h2 {
 	display: inline-block;
 	text-align: left;
 	font-size: 30px;
 	color: #767e9e;
+	word-spacing: 2px;
 }
 .sertitle p {
 	display: inline-block;
 	text-align: left;
-	font-size: 16px;
-	line-height: 18px;
+	font-size: 20px;
+	font-family: 'lato-light';
+	padding-right:10px;
+	line-height: 22px;
+	word-spacing: 2px;
 	color: #767e9e;
 }
-.portfolio {
-	width: 100%;
-	background-color: #303441;
+.serviceitems {
+	display: inline-block;
+	float: center;
+	width: 1020px;
+}
+.pen, .light, .heart, .tablet, .bubble, .star {
+	width: 300px;
 	text-align: left;
-	padding: 20px;
+	margin: 10px;
+	padding: 10px;
+	float: left;
+}
+.pen img, .light img, .heart img, .tablet img, .bubble img, .star img {
+	float: left;
+	vertical-align: top;
+	margin-right: 10px;
+	border: 1px solid #666d89;
+	padding: 12px;
+	border-radius: 100px;
+	-moz-border-radius: 100px;
+	-webkit-border-radius: 100px;
+}
+
+.pen h3, .light h3, .heart h3, .tablet h3, .bubble h3, .star h3  {
+	display: relative;
+	vertical-align: top;
+	color: #666d89;
+	font-style: bold;
+	font-size: 22px;
+	margin-left: 10px;
+}
+
+.pen p, .light p, .heart p, .tablet p, .bubble p, .star p  {
+	width: 270px;
+	display: relative;
+	vertical-align: middle;
+	color: #666d89;
+	margin-left: 60px;
+	line-height: 18px;
+	word-spacing: 2px;
+	padding-right: 24px;
+}
+.portfolio {
+	width: 1020px;
+	background-color: #303441;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	margin: 0 auto;
 }
 .porttitle {
-	width: 85%;
-	display: inline-block;
-	text-align: left;
+	padding: 14px;
 }
-
 .porttitle h2 {
-	display: inline-block;
 	color: #767e9e;
 	font-size: 30px;
+	text-align: left;
+	letter-spacing: 1px;
 }
 .porttitle p {
-	display: inline-block;
-	font-size: 16px;
-	line-height: 18px;
+	text-align: left;
+	font-size: 20px;
+	line-height: 22px;
+	word-spacing: 4px;
 	color: #767e9e;
 }
+
 .portbuttons ul {
 	display: inline-block;
 	float: left;
 	margin: 10px;
 	padding: 10px;
 	word-spacing: 2px;
+
 }
 .portbuttons li {
 	display: inline-block;
 	list-style-type: none;
 }
-button #all {
-
+.all, .wd, .gd, .art {
+    padding: 4px;
+    font: 16px;
+    text-decoration: none;
+    background: #303441;
+	color: #767e9e;
+	cursor: pointer;
+	border: .5px solid #999;
+	border-radius: 10px;
+    border: 1px solid #767e9e;
+    border-color: #767e9e;
+}
+button:hover {
+	background: #f2f2f2;
 }
 
 .clearfix {
 	display: inline-block;
-	width: 80%;
+	width: 100%;
 }
+
+.clearfix:after {
+    clear: both;
+    display: block;
+    height: 0;
+    line-height: 0;
+    visibility: hidden;
+}
+
 .border-box {
-	width: 940px;
+	padding-right: 10px;	
+}
+.border-box img {
+	padding: 10px 10px 10px 10px;
+	vertical-align: middle;
+	position: relative;
 }
 
 .about {
 	display: inline-block;
-	width: 100%;
+	width: 1020px;
 	background-color: #f2f2f2;
-	padding: 20px;
+	padding-left: 30px;
+	padding-bottom: 30px;
+	padding-top: 30px;
+	padding-right: 20px;
 	margin: 0 auto;
 	color: #767e9e;
+	border-bottom: 2px solid #fff;
+	font-family:'lato-light';
+  	src: url('../fonts/lato-light/Lato-lig-webfont.ttf')  format('truetype');
 }
 .about h2 {
+	font-family: 'lato-regular';
+	font-style: bold;
+	padding-left: 10px;
 	text-align: left;
 	font-size: 30px;
+	word-spacing: 2px;
 }
-.about p {
+.firstp  {
 	text-align: left;
-	font-size: 16px;
-	line-height: 20px;
+	font-size: 20px;
+	word-spacing: 4px;
+	line-height: 22px;
+	padding: 10px 10px 10px 10px;
 }
 
 .profiles {
+	width: 1020px;
 	vertical-align: left;
+}
+.photo1, .photo2, .photo3 {
+	width: 320px;
+	float: left;
+	padding: 0px 10px 10px 0px;
+}
+
+.photo1 figure, .photo2 figure, .photo3 figure {
+	padding: 10px 10px 10px 10px;
+}
+figcaption h1 {
+	width: 300px;
+	text-align: left;
+	padding: 0px;
+	font-family: 'lato-black';
+	letter-spacing: 2px;
+}
+figcaption p {
+    width: 300px;
+    text-align: left;
+    padding: 2px;
+    font-size: 16px;
+    word-spacing: 4px;
 }
 
 figure ul {
 	display: inline-block;
 	float: left;
+	padding: 0px;
 }
  figure li {
  	display: inline-block;
  	list-style-type: none;
  	border: 1px solid #666d89;
+ 	padding: 10px;
  	word-spacing: 10px;
 	border-radius: 100px;
 	-moz-border-radius: 100px;
 	-webkit-border-radius: 100px;
  }
+ .quote {
+	width: 1020px;
+	background-color: #ea676b;
+	padding-top: 30px;
+	padding-right: 50px;
+	padding-left: 30px;
+	padding-right: 20px;
+	margin: 0 auto;
+	vertical-align: left;
+	clear-fix: both;
+	border-bottom: 2px solid #eb5055;
+}
+.top h2 {
+	font-size: 30px;
+	color: #f0d8d9;
+	text-align: left;
+	padding: 10px;
+	word-spacing: 2px;
+}
+
+.top p {
+	font-size: 20px;
+	color: #f0d8d9;
+	text-align: left;
+	word-spacing: 4px;
+	padding: 12px;
+	line-height: 22px;
+	font-family:'lato-light';
+}
+
+.placeholder {
+	padding-top: 10px;
+	padding-left: 10px;
+	float: left;
+	width: 50%;
+	-webkit-input-placeholder;
+	-ms-input-placeholder;
+	-moz-placeholder;
+  	color: #ca4549;
+}
+
+textarea {
+	height: 40px;
+	width: 600px;
+	padding: 20px;
+	vertical-align: left;
+	background-color: #ca4549;
+	border: 1px solid #ea676b;
+	border-radius: 20px;
+	overflow: auto;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	font-family: 'lato-regular';
+	color: #ee8386;
+}
+
+#contact {
+	display: inline-block;
+	width: 300px;
+	position: relative;
+	padding-top: 0px;
+	padding-left: 60px;
+}
+#contact h3 {
+	text-align: left;
+	font-size: 20px;
+	font-style: bold;
+	color: #f0d8d9;
+	padding-bottom: 10px;
+	letter-spacing: 2px;
+}
+#contact p {
+	width: 300px;
+	font-size: 14px;
+	text-align: left;
+	line-height: 18px;
+	color: #f0d8d9;
+	word-spacing: 4px;
+}
+
+#contact ul {
+	list-style-type: none;
+	text-align: left;
+	padding: 0px;
+}
+#contact li {
+	list-style-type: none;
+	text-align: left;
+	padding-bottom: 10px;
+	color: #f0d8d9;
+}
+#contact img {
+	padding-right: 10px;
+}
 
 footer {
-	display: inline-block;
 	width: 100%;
-	height: 76px;
+	height: 96px;
 	background-color: #303441;
-	padding: 0px 10px 10px 0px;
-	margin: 10px;
+	padding: 0px 0px 0px 0px;
+	margin: 0 auto;
+}
+.footer {
+	width: 1020px;
+	display: inline-block;
 }
 
 .social {
@@ -188,13 +446,15 @@ footer {
 .social ul {
 	display: inline-block;
 	list-style-type: none;
+	padding-right: 10px;
+	margin: 20px;
 }
 .social li {
 	display: inline-block;
 	list-style-type: none;
 	margin: 0 auto;
-	padding: 10px;
-	word-spacing: 10px;
+	padding: 14px;
+	word-spacing: 14px;
 	border: 1px solid #666d89;
 	border-radius: 100px;
 	-moz-border-radius: 100px;
@@ -205,11 +465,9 @@ footer {
 	display: inline-block;
 	float: left;
 	color: #666d89;
-	padding: 0px 10px 0px 10px;
-	margin: 20px;}
-
-
-
+	padding: 10px;
+	margin: 20px;
+}
 
 
 
